<?xml version="1.0" encoding="utf-8"?>
<resources>
    /*Main Menu*/
    <string name="app_name">OPENQUEST</string>
    <string name="play">PLAY</string>
    <string name="options">OPTIONS</string>
    <string name="score">SCORE</string>
    <string name="editor">EDITOR</string>
    <string name="logros">REWARDS</string>

    /*Play*/
    <string name="categories">CATEGORIES</string>
    <string name="all_categories">ALL CATEGORIES</string>
    <string name="geography">GEOGRAPHY</string>
    <string name="history">HISTORY</string>
    <string name="entertaiment">ENTERTAIMENT</string>
    <string name="sports">SPORTS</string>
    <string name="computing">COMPUTING</string>
    <string name="medicine">MEDICINE</string>
    <string name="get_questions_error">Error getting the questions</string>

    /*Options*/
    <string name="sound">SOUND</string>
    <string name="sound_effects">Sound effects</string>
    <string name="game_music">Game music</string>
    <string name="language">LANGUAGE</string>
    <string name="game_language">Game language</string>
    <string name="account">ACCOUNT</string>
    <string name="change_credentials">Change credentials</string>
    <string name="configuration">CONFIGURATION</string>
    <string name="difficulty">Difficulty</string>
    <string name="remove_round_limit">Remove round limit</string>
    <string name="remove_time_limit">Remove time limit</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="profile_management">PROFILE MANAGEMENT</string>
    <string name="change_name">CHANGE NAME</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="delete_profile">DELETE PROFILE</string>
    <string name="id_error">Error: Could not get the user ID. Please log in again.</string>
    <string name="empty_box">Introduce at least one new name or a new password.</string>
    <string name="short_password">The password must have at least 6 characters.</string>
    <string name="update_profile_error">Error updting profile: </string>
    <string name="delete_profile_error">Error deleting profile: </string>
    <string name="update_profile_successful">profile successfully edited</string>
    <string name="delete_profile_successful">Profile successfully deleted</string>

    /*Login*/
    <string name="login">LOGIN</string>
    <string name="register">CREATE AN ACCOUNT</string>
    <string name="guest">LOGIN AS A GUEST</string>
    <string name="exit">EXIT</string>
    <string name="enter_email">ENTER YOUR EMAIL</string>
    <string name="enter_password">ENTER YOUR PASSWORD</string>
    <string name="enter_valid_email">Introduce un email válido</string>
    <string name="welcome">Welcome!!!</string>

    /*Register*/
    <string name="put_a_name">Put a name</string>
    <string name="put_an_email">Put an email</string>
    <string name="put_a_password">Put a password</string>
    <string name="send">SEND</string>
    <string name="register_successful">Registration successful! You can now log in.</string>
    <string name="register_error">Register error: </string>

    /*Ranking*/
    <string name="title_ranking">Match Ranking</string>
    <string name="ranking_network_error">Network error while loading ranking: </string>
    <string name="ranking_http_error">Error loading ranking: HTTP </string>
    <string name="no_matches">No matches found</string>
    <string name="unable_view_ranking">You must log in to view the global ranking</string>
    <string name="dificultad_ranking">Difficulty: </string>
    <string name="no_date">Date not available</string>
    <string name="user_ranking">User </string>
    <string name="score_ranking">Score </string>
    <string name="rounds_ranking">Rounds </string>
    <string name="date_ranking">Date </string>

    /*Editor*/
    <string name="create_question">CREATE QUESTION</string>
    <string name="edit_question">EDIT QUESTION</string>
    <string name="category">category</string>
    <string name="select_category">SELECT CATEGORY</string>
    <string name="question">Question</string>
    <string name="answer_1">Answer 1</string>
    <string name="answer_2">Answer 2</string>
    <string name="answer_3">Answer 3</string>
    <string name="answer_4">Answer 4</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="send_question">SEND QUESTION</string>
    <string name="unable_view_editor">You must log in to be able to edit the questions.</string>
    <string name="category_unselected_error">Please, select a category</string>
    <string name="not_all_answers">Please fill out all the fields.</string>
    <string name="responses_do_not_match">The correct answer does not match any of the options.</string>
    <string name="network_error">Network error: </string>
    <string name="create_question_error">Failed to create question: </string>
    <string name="create_question_error_http">Failed to create question: HTTP </string>
    <string name="category_not_found">Error: Category not found.</string>
    <string name="question_created">Question created</string>
    <string name="edit">Edit</string>
    <string name="change_question">CHANGE QUESTION</string>
    <string name="edited_question">Edited question</string>


    /*Archievements*/
    <string name="unable_view_archievements">You must log in to be able to obtain and view achievements.</string>

    /*In Game*/
    <string name="time_out">Time Out!!!</string>
    <string name="finish_game">¡Game finished!</string>
    <string name="game_score">Score: </string>
    <string name="server_error">Server response error: </string>
    <string name="save_game_error">Network error saving the game</string>
    <string name="login_require_to_save">Game finished. Log in to save your games.</string>

    <string-array name="idiomas_pregunta">
        <item>es</item>
        <item>en</item>
    </string-array>

</resources>