<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityEditarPregunta">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_question"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/select_category"
                android:textColor="@color/black"
                >
            </TextView>

            <LinearLayout
                android:id="@+id/modo_geografia_editar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:orientation="horizontal"
                android:background="@android:color/holo_blue_light"
                >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/geografia"
                    >
                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/geography"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:layout_marginStart="30dp"
                    >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/modo_historia_editar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:orientation="horizontal"
                android:background="#FFFF00"
                >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/historia"
                    >
                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/history"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:layout_marginStart="30dp"
                    >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/modo_entretenimiento_editar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:orientation="horizontal"
                android:background="@android:color/holo_purple"
                >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/entretenimiento"
                    >
                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/entertaiment"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:layout_marginStart="30dp"
                    >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/modo_deportes_editar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:orientation="horizontal"
                android:background="@android:color/holo_green_light"
                >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/deportes"
                    >
                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sports"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:layout_marginStart="30dp"
                    >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/modo_informatica_editar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:orientation="horizontal"
                android:background="@android:color/darker_gray"
                >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/informatica"
                    >
                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/computing"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:layout_marginStart="30dp"
                    >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/modo_medicina_editar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:orientation="horizontal"
                android:background="@android:color/holo_red_light"
                >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/medicina"
                    >
                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medicine"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:layout_marginStart="30dp"
                    >
                </TextView>
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="40dp">
            </Space>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>